[project]
name = "uber_ride_prediction"
version = "0.1.0"
description = "This project is abouut predicting the uber rides"
authors = [
    {name = "Thirumurgan"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "numpy (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
